tests/ui/endpoint/dynamic_schema_missing_status_codes.stderr
error: `schema` and `status_codes` may only be used together
  --> tests/ui/endpoint/dynamic_schema_missing_status_codes.rs:15:21
   |
15 | #[read_all(schema = "schema")]
   |                     ^^^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/dynamic_schema_missing_status_codes.rs:8:12
  |
8 | #[resource(read_all)]
  |            ^^^^^^^^ not found in this scope
  |
help: you might be missing a type parameter
  |
7 | #[derive(Resource<read_all___gotham_restful_endpoint>)]
  |                  ++++++++++++++++++++++++++++++++++++
